# tiralabra

./: README.md  pyproject.toml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.py  viikkoraportti6.md
src/: generate.py  generated_music_test.mid  imperial_generated.mid  main.py  midi.py  output.mid  trie.py
src/testit/: .coverage  musicGeneration_test.py  test_music_generator.py  test_output.mid
